--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "next": "15.5.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
